netbird-ton/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netbird
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
