netbird-ton/management-grpc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbird-management-grpc
  namespace: netbird
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: netbird-management
  ports:
  - port: 33073
    targetPort: 33073
    name: grpc-backcompat
